# Recency-Reducibility-Gate-Agent

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
demo/: dataio.js  gate.js  index.html  scenarios.js
examples/: run_on_csv.py
parity/: expected.json  fixture_inputs.json  make_fixture.py
recency_cv/: __init__.py  gate.py  thresholds.py
tests/: test_decision.py  test_endtoend.py  test_metric.py  test_placeholder.py
tests/fixtures/: verify_byo.mjs
