[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recency-reducibility-gate"
version = "0.0.1"
description = "Recency-reducibility CV gate: a small reusable module for cross-validation gating."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Isaac" }]
dependencies = [
    "numpy",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["recency_cv"]
